2006-05-22 20:25  ntiffin

	* Connection.m, Schema.m: Correct errors encountered during
	  debuging querytool.

2006-05-13 13:09  ntiffin

	* ChangeLog: Update ChangeLog.

2006-05-07 12:32  ntiffin

	* ChangeLog, DataSource.m, Databases.m, ExplorerModel.h,
	  ExplorerModel.m, Fields.m, RecordSet.m, Schema.h, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Updates for schema to work with
	  query tool and clean up some warning about hidden variables.

2006-04-10 15:54  hawkmoon

	* Connection.m: Removed SetDataType which is incomplete

2006-04-10 15:30  hawkmoon

	* pgCocoaDB.xcodeproj/project.pbxproj: [no log message]

2006-04-10 15:30  hawkmoon

	* Connection.h, Connection.m: Resolved Double Free errors Improved
	  Performance on Database enum

2006-03-26 15:16  ntiffin

	* .DS_Store, ChangeLog, ExplorerModel.m, ExplorerNode.m, Field.m,
	  Fields.m, Record.m, RecordSet.m, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Cleanup Explorer and add
	  -description to fields, records, field, and recordset.

2006-03-15 18:01  ntiffin

	* UnitTest/pgCocoaDBSchemaTest.m: First pass at Explorer logic.

2006-03-12 10:33  ntiffin

	* Schema.h, Schema.m, UnitTest/pgCocoaDBSchemaTest.m: Schema
	  comment functions added and working.

2006-03-11 16:33  ntiffin

	* ChangeLog: Update.

2006-03-11 16:32  ntiffin

	* Table.m: Correct copy/paste error.

2006-03-11 16:31  ntiffin

	* Connection.m: Update to remove old error message when a good
	  connection happens.

2006-03-11 16:22  ntiffin

	* Schema.h, Schema.m, UnitTest/pgCocoaDBSchemaTest.m: Update Schema
	  code.

2006-03-11 08:37  hawkmoon

	* Connection.m: No log message.

2006-03-08 10:36  ntiffin

	* UnitTest/pgCocoaDBSchemaTest.m, Schema.h, Schema.m: First version
	  working Schema.

2006-03-08 10:14  ntiffin

	* Fields.h, Fields.m: Add getValueFromName functionality required
	  by Schema.

2006-03-07 16:56  ntiffin

	* Schema.h, Schema.m, UnitTest/pgCocoaDBSchemaTest.m: Update
	  Schema.

2006-03-05 18:58  ntiffin
